--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,17 +2,44 @@
 .header {
   position: fixed;
   top: 0;
-  left: 250px; /* Sidebar width */
+  left: 100px; /* Sidebar width */
   right: 0;
+  width: 88%;
   height: 120px;
   background-color: #ffffff;
   border-bottom: 3px solid #e0e0e0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 10 20px;
   z-index: 1000;
   box-sizing: border-box; /* Ensure padding does not affect width */
+}
+.chatbot-modal {
+  position: fixed;
+  margin-top: 20px;
+  top: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it's on top of other elements */
+}
+
+.chatbot-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px; /* Adjust width as necessary */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.close-button {
+  background-color: rgb(255, 150, 150) ;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  float: right; /* Position close button at the top-right */
 }
 
 .header-content {
@@ -63,14 +90,22 @@
 .header-icons {
   position: absolute;
   top: 10px; /* Adjust top position as needed */
-  right: 20px; /* Adjust right position to be visible */
+  right: 70px; /* Adjust right position to be visible */
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
-
+.chatbot-icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  margin-top: 6px;
+  width: 26px;
+  height: 26px;
+}
 .search-icon {
   font-size: 16px;
   color: rgb(40, 40, 173); /* Adjust color as needed */
-  margin-bottom: 10px; /* Space between icons if more are added */
+  margin-top: 7px; /* Space between icons if more are added */
 }
