--- a/src/pages/Payroll.css
+++ b/src/pages/Payroll.css
@@ -7,7 +7,7 @@
 }
 
 .upcoming-payments {
-  width: 40%;
+  width: 45%;
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
@@ -16,13 +16,14 @@
 
 .payments-list {
   margin-top: 10px;
+  justify-content: space-evenly;
 }
 
 .payment-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 20px;
   background-color: #f4f4f4;
   margin-bottom: 10px;
   border-radius: 8px;
@@ -49,21 +50,16 @@
 .proceed-button:hover {
   background-color: #0056b3;
 }
-
-.jilo {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(182, 209, 231);
-  border-radius: 8px;
-  padding: 20px;
-  margin-left: 20px;
-  width: 50%;
-}
-
 .report-container {
   display: flex;
   flex-direction: column;
+  background: none;
+  border-radius: 8px;
+  padding: 20px;
+  margin-left: 145px;
   width: 100%;
+  height: 50%;
+  justify-content: space-between;
 }
 
 .report-top {
@@ -159,4 +155,19 @@
   padding: 10px 15px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.jilo{
+  background-color: none;
+}
+.report-container {
+  display: flex;
+  flex-direction: column;
+  background: none;
+  border-radius: 8px;
+  padding: 20px;
+  margin-left: 100px;
+  width: 100%;
+  height: 50%;
+  justify-content: space-between;
 }
